kubernetes/apps/nextcloud/nextcloud-exporter/app/ciliumnetworkpolicy-stats.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nextcloud-stats-exporter
  namespace: nextcloud
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: nextcloud-stats-exporter
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # serverinfo API (nginx service :80, post-DNAT container port)
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": nextcloud
            app.kubernetes.io/name: nextcloud
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    # OpenSearch write
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": logging
            opensearch.org/opensearch-cluster: opensearch
      toPorts:
        - ports:
            - port: "9200"
              protocol: TCP
